--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.zxcizc.OllamaOpenRouterProxy-jetbrains-plugin</id>
+    <id>com.zxcizc.JetbrainsAI-OpenRouterProxy-plugin</id>
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>Ollama OpenRouter Proxy</name>
+    <name>JetbrainsAI OpenRouter Proxy</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor>zxcizc</vendor>
@@ -13,8 +13,7 @@
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Redirects requests from local Ollama-compatible endpoints to OpenRouter.ai.<br>
-    Configure your OpenRouter API key in the settings and point your AI tools to the proxy address.
+    Redirects requests from the JetBrains AI Assistant to OpenRouter.ai, enabling the use of various cloud models.
     ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -29,40 +28,40 @@
                 parentId="tools"
                 instance="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.PluginSettingsConfigurable"
                 id="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.PluginSettingsConfigurable"
-                displayName="Ollama OpenRouter Proxy"/>
+                displayName="JetbrainsAI OpenRouter Proxy"/>
 
         <applicationService
                 serviceImplementation="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.PluginSettingsState"/>
         <postStartupActivity implementation="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.PluginStartupActivity"/>
-        <notificationGroup id="OllamaOpenRouterProxy"
+        <notificationGroup id="JetbrainsAIOpenRouterProxy"
                            displayType="BALLOON"
                            isLogByDefault="true"/>
         <toolWindow
-                id="Ollama Proxy Control"
+                id="JetbrainsAI OpenRouter Proxy Control"
                 anchor="right"
                 icon="AllIcons.General.Filter"
                 factoryClass="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.ProxyControlToolWindowFactory"/>
     </extensions>
 
     <actions>
-        <action id="OllamaProxy.ToggleProxy"
+        <action id="JetbrainsAIProxy.ToggleProxy"
                 class="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.ToggleProxyAction"
-                text="Toggle Ollama Proxy"
+                text="Toggle OpenRouter Proxy"
                 description="Toggle OpenRouter proxy on/off">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
         
-        <action id="OllamaProxy.OpenSettings"
+        <action id="JetbrainsAIProxy.OpenSettings"
                 class="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.OpenSettingsAction"
-                text="Ollama Proxy Settings..."
-                description="Open Ollama OpenRouter Proxy settings">
+                text="OpenRouter Proxy Settings..."
+                description="Open JetbrainsAI OpenRouter Proxy settings">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
         
-        <action id="OllamaProxy.ShowInformation"
+        <action id="JetbrainsAIProxy.ShowInformation"
                 class="com.zxcizc.ollamaopenrouterproxyjetbrainsplugin.ShowInformationAction"
-                text="Ollama Proxy Information..."
-                description="Show Ollama OpenRouter Proxy information and status">
+                text="OpenRouter Proxy Information..."
+                description="Show JetbrainsAI OpenRouter Proxy information and status">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
     </actions>
